Correct panel spacing

--- a/src/components/sp/sp.scss
+++ b/src/components/sp/sp.scss
@@ -68,9 +68,4 @@
     padding-left: 0;
     padding-right: 0;
   }
-
-}
-
-.sp:not(.sp--no-gap,.sp--flush,.sp--flush-y) ::slotted(*:last-child) {
-  padding-bottom: var(--zn-spacing-x-small); // For last element not affected by gap
 }
